--- a/tutorial.html
+++ b/tutorial.html
@@ -5,8 +5,8 @@
     <div id="label-container"></div>
 </div>
 <div id="image">
-    <p>hello</p>
-    <div id="whatTodo">hkhjkhk</div>
+    <p>튜토리얼</p>
+    <div id="whatTodo">당신이 해야할거</div>
 
 </div>
 
