--- a/main.html
+++ b/main.html
@@ -1,59 +1,61 @@
 <!-- 운동 자세 인식을 통한 미로 게임 화면 입니다. -->
-<div id="teachable">
-  <div>Teachable Machine Pose Model</div>
-  <div><canvas id="canvas"></canvas></div>
-  <div id="label-container"></div>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
-  <script src="teachable.js"></script>
+<div id="container">
+  <header>
+    <h1>미로 게임</h1>
+  </header>
+
+  <div id="content">
+
+    <div id="teachable">
+      <div>Teachable Machine Pose Model</div>
+      <div><canvas id="canvas"></canvas></div>
+      <div id="label-container"></div>
+    </div>
+    <!-- 미로 구현 -->
+    <div id="maze_section">
+      <div id="maze_container"><!-- --></div>
+    </div>
+  </div>
+  <footer>
+    <p>© 2022. All rights reserved by B1A3.</p>
+  </footer>
 </div>
 
 
 
 
-<!-- 미로 구현 -->
-<div id="maze_section">
-  <link rel="stylesheet" type="text/css" href="mazing.css">
-  <div id="maze_container"><!-- --></div>
-  <script src="maze-builder.js"></script>
-  <script src="fancy-maze-builder.js"></script>
-  <script src="mazing.js"></script>
-  <script>
+<link rel="stylesheet" type="text/css" href="mazing.css">
+<link rel="stylesheet" type="text/css" href="main.css">
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
+<script src="teachable.js"></script>
 
-      var Maze, MazeGame;
+<script src="maze-builder.js"></script>
+<script src="fancy-maze-builder.js"></script>
+<script src="mazing.js"></script>
+<script>
 
-    const makeMaze = (id, width, height, speech = false) => {
-      Maze = new MazeBuilder(width, height);
-      Maze.placeKey();
+  var Maze, MazeGame,MazeGame2;
+/*
+  const makeMaze = (id, width, height, speech = false) => {
+    Maze = new MazeBuilder(width, height);
+    Maze.placeKey();
 
-      Maze.display(id);
-      MazeGame = new Mazing("maze");
-      //console.log(MazeGame);
-      //if(speech) {
-      //  MazeGame.enableSpeech();
-      //}
-    }
-  
-  
-    makeMaze("maze_container",8, 8);
-
-
-  </script>
-</div>
-<style>
-  #teachable {
-      float: left;
-      width: flex;
+    Maze.display(id);
+    MazeGame = new Mazing("maze");
+    //console.log(MazeGame);
+    //if(speech) {
+    //  MazeGame.enableSpeech();
+    //}
   }
-  #maze_section {
-      float: right;
-      width: flex;
-  }
-  div.box {
 
-    height: 100px;
-  
-    width: 100px;
-  }
-  
-</style>
+
+  makeMaze("maze_container",8, 8);
+*/
+    Maze = new MazeBuilder(8, 8);
+    Maze.placeKey();
+    console.log(Maze);
+    Maze.display("maze_container");
+    MazeGame = new Mazing("maze");
+
+</script>
