--- a/main.html
+++ b/main.html
@@ -1,7 +1,10 @@
+
+<title>mainPage</title>
+
 <!-- 운동 자세 인식을 통한 미로 게임 화면 입니다. -->
 <div id="container">
   <header>
-    <h1>미로 게임</h1>
+    <h1 id="headTitle">미로 게임</h1>
   </header>
 
   <div id="content">
@@ -14,6 +17,7 @@
     <!-- 미로 구현 -->
     <div id="maze_section">
       <div id="maze_container"><!-- --></div>
+      
     </div>
   </div>
   <footer>
