--- a/tutorial.html
+++ b/tutorial.html
@@ -1,4 +1,8 @@
+<title>tutorial</title>
+
 <!-- 운동 자세 인식을 통한 미로 게임 화면 입니다. -->
+<h1>미로 게임</h1>
+
 <div id="teachable">
     <div>Teachable Machine Pose Model</div>
     <div><canvas id="canvas"></canvas></div>
@@ -12,9 +16,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
-<!-- <script type="text/javascript"> -->
-<script src="test.js"></script>
-<script src="tutorial.js"></script>
+<script src="teachable.js"></script>
     
 <style>
     #teachable {
