--- a/main_test.html
+++ b/main_test.html
@@ -77,7 +77,8 @@
     body{
       height: 100vh;
       width: 100vw;
-      background-color: #979696;
+      background-image: url("bck4.jpg");
+      background-size: cover;
     }
     #logo {
       width: 100px;
