--- a/tutorial_test.html
+++ b/tutorial_test.html
@@ -63,8 +63,8 @@
     body{
       height: 100vh;
       width: 100vw;
-      background-color: #979696;
-    }
+      background-image: url("bck4.jpg");
+      background-size: cover;    }
     #logo {
       width: 100px;
       border-radius: 70%;
