폴더화 시킴 html css js img 여기 잘 찾아보셈

--- a/html/intro.html
+++ b/html/intro.html
@@ -24,7 +24,7 @@
         </div>
         <div class="col">
             <div class="pt-5">
-                    <img src="logo.png" id="logo" />
+                    <img src="../image/logo.png" id="logo" />
                 <div class="input-group m-3">
                     <span class="input-group-text" style="background-color: black; color:white;">이름 </span>
                     <div class="form-floating">
@@ -50,7 +50,7 @@
                 <a class="card-test" href="...">
                     <div class="face face1">
                         <div class="content">
-                            <img src="1.gif">
+                            <img src="../image/1.gif">
                             <h3>난이도 상</h3>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                 <a class="card-test" href="...">
                     <div class="face face1">
                         <div class="content">
-                            <img src="maze.png">
+                            <img src="../image/maze.png">
                             <h3>난이도 중</h3>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
                 <div class="card-test">
                     <div class="face face1">
                         <div class="content">
-                            <img src="maze.png">
+                            <img src="../image/maze.png">
                             <h3>난이도 하</h3>
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                 <div class="card-test">
                     <div class="face face1">
                         <div class="content">
-                            <img src="maze.png">
+                            <img src="../image/maze.png">
                             <h3>튜토리얼</h3>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                 <div class="card-test">
                     <div class="face face1">
                         <div class="content">
-                            <img src="maze.png">
+                            <img src="../image/maze.png">
                             <h3>랭킹</h3>
                         </div>
                     </div>
@@ -134,7 +134,7 @@
             justify-content: center;
             align-items: center;
             font-family: consolas;
-            background-image: url('background.gif');
+            background-image: url('../image/background.gif');
         }
 
         a {
