--- a/html/main.html
+++ b/html/main.html
@@ -6,45 +6,66 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>mainPage</title>
-  <link rel="stylesheet" type="text/css" href="mazing_test.css">
+  <link rel="stylesheet" type="text/css" href="../css/mazing.css">
+  <link rel="stylesheet" type="text/css" href="../css/bar.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
 <body>
-  <div class="row text-center">
+  <div class="up row text-center">
     <div class="col">
       <h1 class="..." style="color: red;">너, 운동</h1>
     </div>
     <div class="col">
       <div class="pt-5">
-        <img src="logo.png" id="logo" />
+        <img src="../image/logo.png" id="logo" />
       </div>
     </div>
     <div class="col">
       <h1 class="..." style="color: red;">된 거야</h1>
     </div>
-
   </div>
   <div class="container text-center">
-    <div class="row">
-      <div class="col-4">
+    <div class="row content">
+      <div class="col-3">
         <div class="card shadow">
           <div><canvas id="canvas" class="card-img-top" style="width:100%;"></canvas></div>
           <div class="card-body">
             <div class="teachable">
-              <h1>00:20:20</h1>
+              <h1 class="time">00:20:20</h1>
+
               <div id="label-container"></div>
-              <div>상 : 스쿼트</div>
+              <div>배경화면</div>
+              <div class="progress-bar__container">
+                <div class="progress-bar"></div>
+              </div>
+              <div>서있기</div>
+              <div class="progress-bar__container">
+                <div class="progress-bar"></div>
+              </div>
+              <div>스쿼트</div>
+              <div class="progress-bar__container">
+                <div class="progress-bar"></div>
+              </div>
+              <div>팔 벌려 뛰기</div>
+              <div class="progress-bar__container">
+                <div class="progress-bar"></div>
+              </div>
+              <div>왼쪽</div>
+              <div class="progress-bar__container">
+                <div class="progress-bar"></div>
+              </div>
+              <div>오른쪽</div>
+              <div class="progress-bar__container">
+                <div class="progress-bar"></div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-8">
-        <div id="maze_section" class="m-1">
-          <div id="maze_container" style="width: 100%; height: 100%;">
-          </div>
-
+      <div class="col-9">
+        <div id="maze_container" style="width: 100%; height: 100%;">
         </div>
       </div>
     </div>
@@ -58,11 +79,11 @@
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
-  <script src="teachable.js"></script>
+  <script src="../js/teachable.js"></script>
+  <script src="../js/maze-builder.js"></script>
+  <script src="../js/mazing.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
 
-  <script src="maze-builder.js"></script>
-  <script src="fancy-maze-builder.js"></script>
-  <script src="mazing.js"></script>
   <script>
 
     var Maze, MazeGame, MazeGame2;
@@ -74,12 +95,29 @@
 
   </script>
   <style>
-    body{
+    body {
       height: 100vh;
       width: 100vw;
-      background-image: url("bck4.jpg");
+      background-image: url("../image/bck4.jpg");
       background-size: cover;
     }
+
+    .up {
+      height: 15%;
+    }
+
+    .container {
+      height: 75%;
+    }
+
+    .content {
+      height: 100%;
+    }
+
+    #maze {
+      height: 100%;
+    }
+
     #logo {
       width: 100px;
       border-radius: 70%;
