--- a/old/tutorial1.html
+++ b/old/tutorial1.html
@@ -28,7 +28,7 @@
   </div>
   <div class="container text-center">
     <div class="row">
-      <div class="col-4">
+      <div class="col-3">
         <div class="card shadow">
           <div><canvas id="canvas" class="card-img-top" style="width:100%;"></canvas></div>
           <div class="card-body">
@@ -40,7 +40,7 @@
           </div>
         </div>
       </div>
-      <div class="col-8">
+      <div class="col-9">
         <!-- <div id="image" style="width: 100%; height:100%" >
             <img class="myGif" src="1.gif" style="width: 100%; height:100%">
         </div> -->
@@ -181,7 +181,7 @@ body {
 
     .container-carousel {
         width: 100%;
-        max-width: 800px;
+        /*max-width: 800px;*/
         max-height: 600px;
         height: 100%;
         transform-style: preserve-3d;
