--- a/laboratory/carousel_test copy.html
+++ b/laboratory/carousel_test copy.html
@@ -57,6 +57,24 @@
         </div>
 
     </div>
+    <button onclick="myFunction()">Click me</button>
+    <script>
+        k = document.getElementsByName('slider');
+        i=0;
+        function myFunction() {
+            k[i].checked = true;
+            i++;
+            if (i == k.length) {
+                i = 0;
+            }
+            w=document.querySelector('input[name="slider"]:checked').id;
+            console.log(w);
+            
+
+        }
+
+    </script>
+
 </div>
 
 <style>
@@ -134,35 +152,38 @@ body {
     #item-1:checked~.cards #song-5,
     #item-2:checked~.cards #song-1,
     #item-3:checked~.cards #song-2,
-    #item-4:checked~.cards #song-3, 
-    #item-5:checked~.cards #song-4{
+    #item-4:checked~.cards #song-3,
+    #item-5:checked~.cards #song-4 {
         transform: translatex(-40%) scale(.8);
         opacity: .4;
         z-index: 1;
     }
+
     #item-1:checked~.cards #song-4,
     #item-2:checked~.cards #song-5,
     #item-3:checked~.cards #song-1,
-    #item-4:checked~.cards #song-2, 
-    #item-5:checked~.cards #song-3{
+    #item-4:checked~.cards #song-2,
+    #item-5:checked~.cards #song-3 {
         transform: translatex(0%) scale(.8);
         opacity: .4;
         z-index: 0;
     }
+
     #item-1:checked~.cards #song-3,
     #item-2:checked~.cards #song-4,
     #item-3:checked~.cards #song-5,
-    #item-4:checked~.cards #song-1, 
-    #item-5:checked~.cards #song-2{
+    #item-4:checked~.cards #song-1,
+    #item-5:checked~.cards #song-2 {
         transform: translatex(0%) scale(.8);
         opacity: .4;
         z-index: 0;
     }
+
     #item-1:checked~.cards #song-2,
     #item-2:checked~.cards #song-3,
     #item-3:checked~.cards #song-4,
-    #item-4:checked~.cards #song-5, 
-    #item-5:checked~.cards #song-1{
+    #item-4:checked~.cards #song-5,
+    #item-5:checked~.cards #song-1 {
         transform: translatex(40%) scale(.8);
         opacity: .4;
         z-index: 1;
@@ -173,7 +194,7 @@ body {
     #item-2:checked~.cards #song-2,
     #item-3:checked~.cards #song-3,
     #item-4:checked~.cards #song-4,
-    #item-5:checked~.cards #song-5{
+    #item-5:checked~.cards #song-5 {
         transform: translatex(0) scale(1);
         opacity: 1;
         z-index: 2;
@@ -254,8 +275,8 @@ body {
     #item-3:checked~.player #test {
         transform: translateY(-80px);
     }
+
     #item-4:checked~.player #test {
         transform: translateY(-120px);
     }
 </style>
-
